src/goupile/client/instance.css
/* SPDX-License-Identifier: GPL-3.0-or-later */
/* SPDX-FileCopyrightText: 2025 Niels Martignène <niels.martignene@protonmail.com> */

html.instance {
    --menu_color: #262626;
    --menu_color_n1: #38383b;
    --menu_color_n2: #4a494d;
    --menu_color_n3: #525155;
    --page_color: #24579d;
    --page_color_n1: #346bb8;
    --anchor_color: #24579d;
    --anchor_color_n1: #346bb8;
    --active_color: #fe7735;
    --active_color_n1: #ff9059;
    --many_color: #207358;
    --many_color_n1: #298a6a;

    --block_rounding: 0px;
    --widget_rounding: 0px;
    --button_rounding: 3px;
}

/* -------------------- Layout -------------------- */

#ins_page {
    box-sizing: border-box;
    display: flex;
    margin: 0;
    padding-top: 6px;
    width: 100%;
    border: 12px solid white;
    flex-direction: row;
    justify-content: center;
}
#ins_content {
    width: 100%;
    max-width: 1080px;
}

#ins_form {
    box-sizing: border-box;
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 36px;
}
#ins_levels {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
#ins_tiles {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: center;
    justify-content: center;
    gap: 18px;
}
* + #ins_tiles { padding-top: 36px; }

html.mobile #ins_page { padding-top: 0; }

/* -------------------- Main menu -------------------- */

#ui_top.locked { filter: invert(100%); }

.ins_status {
    display: inline-block;
    margin-top: 2px;
    padding: 0px 4px 1px 4px;
    border-radius: 4px;
    background: white;
    color: black;
    font-size: 0.8em;
    white-space: nowrap;
}

html.small #ins_drop > button { max-width: 300px; }
html.mobile #ins_drop > button { max-width: 200px; }

.ins_id::before {
    content: '#';
    padding-right: 1px;
    color: #666;
}
#ui_top > .ins_id::before { color: white; }

/* -------------------- Left menu -------------------- */

#ins_menu {
    display: none;
    position: sticky;
    top: 18px;
    align-self: flex-start;
    box-sizing: border-box;
    width: 240px;
    padding-right: 12px;
    font-size: 1.1em;
}
#ins_menu > a {
    display: block;
    font-size: 1.1em;
    margin: 0 0 6px 0;
    font-weight: bold;
    color: var(--active_color_n1);
    text-decoration: none;
}
#ins_menu * + a { margin-top: 12px; }
#ins_menu ul {
    margin: 0;
    padding: 0;
}
#ins_menu li {
    list-style: none;
    display: flex;
    margin-top: 1px;
}
#ins_menu li::before {
    content: '–';
    color: #ccc;
}
#ins_menu li > * { padding: 0 5px; }
#ins_menu ul a {
    display: flex;
    align-items: center;
    flex: 1;
    margin-left: 3px;
    padding: 1px calc(5px + var(--widget_rounding) / 4);
    text-decoration: none;
    color: black;
    border-radius: var(--widget_rounding);
}
#ins_menu ul a.active, #ins_menu ul a:hover {
    background: linear-gradient(var(--active_color_n1), var(--active_color));
    color: white;
}
#ins_menu hr {
    margin: 10px 0;
    border: 0;
    border-top: 1px solid #dfdfdf;
}

#ins_actions {
    display: none;
    position: sticky;
    top: 18px;
    align-self: flex-start;
    box-sizing: border-box;
    height: calc(100vh - 3.5em - 28px);
    width: 220px;
    flex-direction: column;
    padding-left: 12px;
}
#ins_actions h1 {
    font-size: 1.1em;
    margin: 0 0 6px 0;
    font-weight: bold;
    color: var(--many_color_n1);
}
#ins_actions * + h1 { margin-top: 10px; }
#ins_actions ul {
    margin: 0;
    padding: 0;
}
#ins_actions li {
    list-style: none;
    display: flex;
    margin-top: 1px;
}
#ins_actions li::before {
    content: '–';
    color: #ccc;
}
#ins_actions li > * { padding: 0 5px; }
#ins_actions ul a {
    display: flex;
    flex: 1;
    margin-left: 3px;
    padding: 1px calc(5px + var(--widget_rounding) / 4);
    text-decoration: none;
    color: black;
    border-radius: var(--widget_rounding);
}
#ins_actions ul a.active, #ins_actions ul a:hover {
    background: linear-gradient(var(--many_color_n1), var(--many_color));
    color: white;
}
#ins_actions hr {
    margin: 10px;
    border: 0;
    border-top: 1px solid #dfdfdf;
}
#ins_actions > button { width: 100%; }
#ins_actions > button + button { margin-top: 6px; }

#ins_actions > .ins_id {
    text-align: center;
    margin-bottom: 10px;
    border-bottom: 1px solid #dfdfdf;
}

html:not(.small) #ui_panels > div:only-child #ins_menu { display: block; }
html:not(.small) #ui_panels > div:only-child #ins_actions { display: flex; }

/* -------------------- Bottom bar -------------------- */

#ins_tasks {
    display: none;
    bottom: 0;
    background: #f4f2ef;
    color: white;
    justify-content: center;

    --menu_color: #f4f2ef;
    --menu_color_n1: #fdfbf8;
}
#ins_tasks.force {
    display: flex;
    position: static;
}
#ins_tasks button { color: black; }
#ins_tasks .drop > button::after { filter: invert(100%); }
#ins_tasks .drop > div > button:not(:disabled):hover { color: white; }
#ins_tasks button.color:not(:disabled) {
    background-color: var(--color);
    border: 1px solid var(--color);
    color: white;
}
#ins_tasks > .hid { font-weight: bold; }
html.small #ins_tasks { display: flex; }
#ui_panels > div:not(:only-child) #ins_tasks { display: flex; }

#ins_tasks > .ins_id { pointer-events: none; }

/* -------------------- Status -------------------- */

.ins_level {
    display: flex;
    height: 1.6em;
    padding: 12px;
    background: #dfdfdf;
    cursor: pointer;
    align-items: center;
    border-radius: var(--block_rounding);
}
.ins_level:hover { filter: brightness(80%) contrast(120%); }
.ins_level.complete {
    background: var(--page_color_n1);
    color: white;
}
.ins_level > .title {
    font-weight: bold;
    flex: 1;
}
.ins_level > .status {
    width: 250px;
    text-align: right;
}
.ins_help { padding: 0.5em 1em 0 1em; }

.ins_tile {
    display: flex;
    box-sizing: border-box;
    width: 140px;
    height: 140px;
    padding: 12px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 8px;
    background: #dfdfdf;
    cursor: pointer;
    border-radius: var(--block_rounding);
}
.ins_tile:hover { filter: brightness(80%) contrast(120%); }
.ins_tile.complete {
    background: var(--page_color_n1);
    color: white;
}
.ins_tile.complete > img { filter: invert(100%); }
.ins_tile > img {
    width: 48px;
    height: 48px;
    object-fit: contain;
}
.ins_tile > .index {
    font-size: 0.9em;
    opacity: 0.8;
}
.ins_tile > .title {
    text-align: center;
    font-weight: bold;
}
.ins_tile > .status {
    width: 100px;
    text-align: center;
}

.ins_progress {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 6px;
}
.ins_progress > div {
    flex: 1;
    height: 10px;
    background: linear-gradient(to right, #383838 0 calc(1% * var(--progress)), white calc(1% * var(--progress)));
    border-radius: 1px;
}
.ins_progress > span {
    font-size: 0.8em;
    text-align: left;
}

/* -------------------- Data -------------------- */

.ins_filters {
    display: flex;
    padding-bottom: 4px;
    flex-wrap: wrap;
    gap: 8px;
}

#ins_data td:not(.active).partial a { color: #346bb8; }
#ins_data td:not(.active).complete a { color: #298a6a; }
#ins_data td:not(.active).disabled a { color: inherit; }

/* -------------------- Misc -------------------- */

#ins_develop {
    display: block;
    position: sticky;
    left: calc(50% - 160px);
    bottom: 18px;
    width: 320px;
    padding: 6px 9px;
    background: #db0a0a;
    color: white;
    text-align: center;
    z-index: 9999999;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}
#ins_develop::before {
    content: '⚠\FE0E';
    padding-right: 3px;
}
@media (hover: hover) {
    #ins_develop:hover { filter: opacity(20%); }
}

.ins_highlight {
    outline: 2px dotted #24579d;
    outline-offset: 2px;
}

/* -------------------- Deploy dialog -------------------- */

.ins_deploy td.actions { text-align: center; }
.ins_deploy td.actions > a { padding: 0 6px 0 6px; }
.ins_deploy td.actions > a.active {
    background: var(--active_color);
    border-radius: 50%;
    color: white;
    pointer-events: none;
}

.ins_deploy td.path { text-align: left; }
.ins_deploy td.path.overwrite {
    color: red;
    font-style: italic;
}
.ins_deploy td.path.delete {
    font-style: italic;
    text-decoration: line-through;
}
.ins_deploy td.path.virtual { color: #ccc; }

.ins_deploy td.size {
    color: #999;
    text-align: right;
    font-style: italic;
}
.ins_deploy span.conflict {
    font-style: normal;
    color: red;
}

/* -------------------- Print -------------------- */

@media print {
    #ins_menu { display: none !important; }
    #ins_actions { display: none !important; }
    #ins_develop { display: none !important; }
}

